--- a/src/SearchInput.css
+++ b/src/SearchInput.css
@@ -1,36 +1,36 @@
-.container{
-    display: flex;
+.container {
+  display: flex;
 }
 
-.input-text{
-    background: rgba(50, 50, 50, 0.8);
-    mix-blend-mode: normal;
-    
-    padding:17px 20px;
-    font-size: 20px;
-    line-height: 24px;
-    color: #FFFFFF;
-    mix-blend-mode: normal;
-    margin: 0 14px;
-    border-radius: 4px;
-    border:none;
-    flex: 8;
+.input-text {
+  background: rgba(50, 50, 50, 0.8);
+  mix-blend-mode: normal;
+
+  padding: 17px 20px;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+  mix-blend-mode: normal;
+  margin: 0 14px;
+  border-radius: 4px;
+  border: none;
+  flex: 8;
 }
 
-.button{
-    background: #F65261;
-    padding:17px 20px;
+.button {
+  background: #f65261;
+  padding: 17px 20px;
+  text-align: center;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  text-transform: uppercase;
 
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    text-align: center;
-    text-transform: uppercase;
-
-    color: #FFFFFF;
-    margin: 0 14px;
-    border-radius: 4px;
-    border:none;
-    flex: 1;
+  color: #ffffff;
+  margin: 0 14px;
+  border-radius: 4px;
+  border: none;
+  flex: 1;
 }
