--- a/src/Movie.css
+++ b/src/Movie.css
@@ -1,7 +1,9 @@
 .movie-container {
   margin: 15px;
-  flex: 1;
+  flex: 1 1;
+  min-width: 200px;
 }
+
 .movie-image {
   width: -webkit-fill-available;
   width: -moz-available; /* WebKit-based browsers will ignore this. */
